examples/compiler_errors/named_field_pun_unbound_e466.flx
// expect: compile_error
// expect-error: E004
// expect-error: E466

// Using field punning when no variable with the field's name is in scope.
//
// Expected: E466 Punned Field Not In Scope
//   "No variable named `x` is in scope for punning."

data Point { Point { x: Int, y: Int } }

fn main() {
    let y = 42
    let p = Point { x, y }
    p
}
